# Super-Mario

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: .formatting.yml  build.yml  static-analysis.yml
src/: Animation.cpp  Goomba.cpp  InputManager.cpp  Main.cpp  Mario.cpp  ResourceManager.cpp  StateMachine.cpp  SuperMarioGame.cpp
src/headers/: Animation.h  Goomba.h  InputManager.h  Mario.h  ResourceManager.h  State.h  StateMachine.h  SuperMarioGame.h  Textures.h
